--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
-  <button (click)="drawer.toggle()" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <button (click)="drawer.toggle()" mat-icon-button class="example-icon"
+          aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
   <span class="example-spacer"></span>
@@ -14,9 +15,9 @@
     </ul>
   </mat-drawer>
   <mat-drawer-content>
-<router-outlet>
+    <router-outlet>
 
-</router-outlet>
+    </router-outlet>
   </mat-drawer-content>
 </mat-drawer-container>
 
