--- a/src/app/components/articles/articles.component.html
+++ b/src/app/components/articles/articles.component.html
@@ -13,7 +13,8 @@
       </mat-card-content>
       <mat-card-actions>
         <div class="example-button-row">
-          <button mat-raised-button color="primary" routerLink="/topic/{{article.topicId}}/{{article.id}}">Read more</button>
+          <button mat-raised-button color="primary" routerLink="/topic/{{article.topicId}}/{{article.id}}">Read more
+          </button>
         </div>
       </mat-card-actions>
     </mat-card>
